Fix footer link on mobile view

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -548,32 +548,39 @@ footer {
   text-align: center;
   font-size: 12px;
   line-height: 14px;
-  color: #656565; }
+  color: #fff; }
+
+.social-links .fb-link {
+  background-image: url(@@cdn/i/ico-facebook_desktop.svg);
+  width: 27px;
+  height: 27px; }
+.social-links .twitter-link {
+  background-image: url(@@cdn/i/ico-twitter_desktop.svg);
+  width: 28px;
+  height: 24px; }
+.social-links .linkedin-link {
+  background-image: url(@@cdn/i/ico-linkedin_desktop.svg);
+  width: 27px;
+  height: 27px; }
+.social-links .google-link {
+  background-image: url(@@cdn/i/ico-google_desktop.svg);
+  width: 27px;
+  height: 27px; }
 
 @media only screen and (max-width: 1024px) {
   .bottom-footer, .fold-pusher {
-    height: 170px; }
+    height: auto; }
+  .social-links {
+    margin-top: 0;
+  }
   .bottom-footer .menu-item {
-    display: none;
-    margin-top: 30px; }
-  .menu-visible .bottom-footer .menu-item {
     display: block; }
-  .social-links .fb-link {
-    background-image: url(@@cdn/i/ico-facebook.svg);
-    width: 27px;
-    height: 27px; }
-  .social-links .twitter-link {
-    background-image: url(@@cdn/i/ico-twitter.svg);
-    width: 28px;
-    height: 24px; }
-  .social-links .linkedin-link {
-    background-image: url(@@cdn/i/ico-linkedin.svg);
-    width: 27px;
-    height: 27px; }
-  .social-links .google-link {
-    background-image: url(@@cdn/i/ico-google.svg);
-    width: 27px;
-    height: 27px; } }
+  .bottom-footer nav {
+    position: relative;
+    top: auto;
+    left: auto;
+    text-align: center;
+  } }
 
 @media only screen and (min-width: 1025px) {
   .bottom-footer, .fold-pusher {
@@ -592,25 +599,15 @@ footer {
       .bottom-footer .menu-item .menu-link:hover {
         color: #0096ff; }
   .copyright-notice {
-    font-size: 15px;
-    color: #fff; }
+    font-size: 15px; }
   .account-footer .copyright-notice {
-    font-size: 12px;
-    color: #656565; }
+    font-size: 12px; }
   .social-links {
     margin-bottom: 3px; }
     .social-links a {
       width: 26px;
       height: 26px;
-      margin-top: 13px; }
-    .social-links .fb-link {
-      background-image: url(@@cdn/i/ico-facebook_desktop.svg); }
-    .social-links .twitter-link {
-      background-image: url(@@cdn/i/ico-twitter_desktop.svg); }
-    .social-links .linkedin-link {
-      background-image: url(@@cdn/i/ico-linkedin_desktop.svg); }
-    .social-links .google-link {
-      background-image: url(@@cdn/i/ico-google_desktop.svg); } }
+      margin-top: 13px; } }
 
 
 /* header / log-in area */
